<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.categories.UndergraduateBrowseFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/undergraduate_medical_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/medical"
                android:textSize="@dimen/label_fullscreen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/undergraduate_medical_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recyclerview_parent_custom_height_books"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/undergraduate_medical_text_view" />

            <TextView
                android:id="@+id/undergraduate_engineering_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/engineering"
                android:textSize="@dimen/label_fullscreen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/undergraduate_medical_recycler_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/undergraduate_engineering_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recyclerview_parent_custom_height_books"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/undergraduate_engineering_text_view" />

            <TextView
                android:id="@+id/undergraduate_bba_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/bba"
                android:textSize="@dimen/label_fullscreen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/undergraduate_engineering_recycler_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/undergraduate_bba_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recyclerview_parent_custom_height_books"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/undergraduate_bba_text_view" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_shopping_cart_512" />


</androidx.constraintlayout.widget.ConstraintLayout>
